--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>labrepl</groupId>
-  <artifactId>labrepl</artifactId>
+  <groupId>try-labrepl</groupId>
+  <artifactId>try-labrepl</artifactId>
   <version>0.0.2-SNAPSHOT</version>
-  <name>labrepl</name>
+  <name>try-labrepl</name>
   <description>Clojure exercises, with integrated repl and webapp</description>
   <scm>
-    <connection>scm:git:git://github.com/relevance/labrepl.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/relevance/labrepl.git</developerConnection>
-    <tag>dc2f5a1c43019e95f43cec00ea309464379c2f2b</tag>
-    <url>https://github.com/relevance/labrepl</url>
+    <connection>scm:git:git://github.com/semperos/try-labrepl.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/semperos/try-labrepl.git</developerConnection>
+    <tag>236c1a86188ec66ccaec12635b87c3a1f2c9b1ba</tag>
+    <url>https://github.com/semperos/try-labrepl</url>
   </scm>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>src/clj</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
     <resources>
       <resource>
@@ -32,15 +33,15 @@
         <version>1.3.1</version>
         <configuration>
           <sourceDirectories>
-            <sourceDirectory>src</sourceDirectory>
-            <sourceDirectory>src/solutions</sourceDirectory>
-            <sourceDirectory>src/labrepl</sourceDirectory>
-            <sourceDirectory>src/labs</sourceDirectory>
-            <sourceDirectory>src/student</sourceDirectory>
+            <sourceDirectory>src/clj</sourceDirectory>
+            <sourceDirectory>src/clj/solutions</sourceDirectory>
+            <sourceDirectory>src/clj/try_labrepl</sourceDirectory>
+            <sourceDirectory>src/clj/labs</sourceDirectory>
+            <sourceDirectory>src/clj/student</sourceDirectory>
           </sourceDirectories>
           <testSourceDirectories>
             <testSourceDirectory>test</testSourceDirectory>
-            <testSourceDirectory>src/labrepl</testSourceDirectory>
+            <testSourceDirectory>test/try_labrepl</testSourceDirectory>
             <testSourceDirectory>test/solutions</testSourceDirectory>
           </testSourceDirectories>
         </configuration>
@@ -48,14 +49,6 @@
     </plugins>
   </build>
   <repositories>
-    <repository>
-      <id>clojure</id>
-      <url>http://build.clojure.org/releases</url>
-    </repository>
-    <repository>
-      <id>clojure-snapshots</id>
-      <url>http://build.clojure.org/snapshots</url>
-    </repository>
     <repository>
       <id>central</id>
       <url>http://repo1.maven.org/maven2</url>
@@ -67,62 +60,44 @@
   </repositories>
   <dependencies>
     <dependency>
-      <groupId>swank-clojure</groupId>
-      <artifactId>swank-clojure</artifactId>
-      <version>1.3.0</version>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <artifactId>clojure</artifactId>
-          <groupId>org.clojure</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>1.3.0-beta1</version>
+      <version>1.4.0</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>tools.logging</artifactId>
-      <version>0.1.2</version>
+      <version>0.2.4</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>data.json</artifactId>
-      <version>0.1.0</version>
+      <version>0.1.3</version>
     </dependency>
     <dependency>
-      <groupId>ring</groupId>
-      <artifactId>ring-jetty-adapter</artifactId>
-      <version>0.3.11</version>
+      <groupId>clojail</groupId>
+      <artifactId>clojail</artifactId>
+      <version>0.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>noir</groupId>
+      <artifactId>noir</artifactId>
+      <version>1.3.0-beta10</version>
       <exclusions>
         <exclusion>
           <artifactId>clojure</artifactId>
           <groupId>org.clojure</groupId>
         </exclusion>
         <exclusion>
-          <artifactId>clojure-contrib</artifactId>
-          <groupId>org.clojure</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>compojure</groupId>
-      <artifactId>compojure</artifactId>
-      <version>0.6.5</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>clojure</artifactId>
-          <groupId>org.clojure</groupId>
+          <artifactId>hiccup</artifactId>
+          <groupId>hiccup</groupId>
         </exclusion>
       </exclusions>
     </dependency>
     <dependency>
       <groupId>hiccup</groupId>
       <artifactId>hiccup</artifactId>
-      <version>0.3.6</version>
+      <version>1.0.1</version>
       <exclusions>
         <exclusion>
           <artifactId>clojure</artifactId>
@@ -133,7 +108,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.16</version>
+      <version>1.2.17</version>
       <exclusions>
         <exclusion>
           <artifactId>mail</artifactId>
@@ -154,25 +129,14 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>swank-clojure</groupId>
-      <artifactId>swank-clojure</artifactId>
-      <version>1.3.0</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>clojure</artifactId>
-          <groupId>org.clojure</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
       <groupId>jline</groupId>
       <artifactId>jline</artifactId>
-      <version>0.9.94</version>
+      <version>2.7</version>
     </dependency>
   </dependencies>
 </project>
 
 <!-- This file was autogenerated by Leiningen.
-     Please do not edit it directly; instead edit project.clj and regenerate it.
-     It should not be considered canonical data. For more information see
-     https://github.com/technomancy/leiningen -->
+  Please do not edit it directly; instead edit project.clj and regenerate it.
+  It should not be considered canonical data. For more information see
+  https://github.com/technomancy/leiningen -->
